--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,9 +21,26 @@ services:
     environment:
       - NODE_ENV=production
       - PORT=3000
+      - MONGODB_URI=mongodb://mongodb:27017/todo
+    depends_on:
+      - mongodb
+    networks:
+      - todo-network
+
+  mongodb:
+    image: mongo:latest
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb_data:/data/db
+    environment:
+      - MONGO_INITDB_DATABASE=todo
     networks:
       - todo-network
 
 networks:
   todo-network:
-    driver: bridge 
+    driver: bridge
+
+volumes:
+  mongodb_data: 
